Feat: chapter and pages apis
